--- a/.travis.yml
+++ b/.travis.yml
@@ -2,37 +2,76 @@ language: node_js
 
 jobs:
   fast_finish: true
+
+  allow_failures:
+    - env: SCRIPT=test NVM=nightly
+    - node_js: nightly
+
   include:
     - stage: Lint
+      os: linux
       env: SCRIPT=lint
-      node_js: 'stable'
-    - &linux
-      stage: Test (Linux)
+      node_js: 10
+
+    - &test
+      stage: Test
       env: SCRIPT=test
-      node_js: 'stable'
-    - <<: *linux
-      node_js: 'lts/*'
-    - <<: *linux
-      node_js: 6
-    - &osx
-      stage: Test (MacOS)
-      os: 'osx'
-      env: SCRIPT=test
-      node_js: 'stable'
-    - <<: *osx
-      node_js: 'lts/*'
-    - <<: *osx
+      node_js: 10
+
+    # Linux
+    - <<: *test
+      env: SCRIPT=test NVM=nightly
+    - <<: *test
+      node_js: 8
+    - <<: *test
       node_js: 6
 
+    # MacOS
+    - <<: *test
+      os: osx
+      env: SCRIPT=test NVM=nightly
+    - <<: *test
+      os: osx
+      node_js: 10
+    - <<: *test
+      os: osx
+      node_js: 8
+    - <<: *test
+      os: osx
+      node_js: 6
+
+    # Windows
+    - <<: *test
+      os: windows
+      node_js: nightly
+    - <<: *test
+      os: windows
+      node_js: 10
+    - <<: *test
+      os: windows
+      node_js: 8
+    - <<: *test
+      os: windows
+      node_js: 6
+
+before_install:
+  - if [[ $NVM == 'nightly' ]]; then
+      NVM_NODEJS_ORG_MIRROR=https://nodejs.org/download/nightly/ nvm i node;
+    fi
+
 install:
-  - npm i -g npm@latest
+  - if [[ "$TRAVIS_OS_NAME" != 'windows' ]]; then
+      npm i -g npm;
+    fi
   - npm i
 
 script: npm run $SCRIPT
 
 after_success:
-  - npm i codecov
-  - $(npm bin)/codecov
+  - if [[ "$TRAVIS_OS_NAME" == 'linux' ]]; then
+      npm i codecov;
+      $(npm bin)/codecov;
+    fi
 
 notifications:
   email: false
